UI changes made

--- a/BloodDonor/app/src/main/res/layout/fragment_home.xml
+++ b/BloodDonor/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".ui.home.HomeFragment">
+    tools:context=".user_interface.home.HomeFragment">
 
     <TextView
         android:id="@+id/tvSelectType"
