--- a/BloodDonor/app/src/main/res/navigation/mobile_navigation.xml
+++ b/BloodDonor/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.dev.blooddonor.ui.home.HomeFragment"
+        android:name="com.dev.blooddonor.user_interface.home.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.dev.blooddonor.ui.dashboard.DashboardFragment"
+        android:name="com.dev.blooddonor.user_interface.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.dev.blooddonor.ui.notifications.NotificationsFragment"
+        android:name="com.dev.blooddonor.user_interface.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
     <fragment
