some UI changes done

--- a/BloodDonor/app/src/main/res/layout/activity_login.xml
+++ b/BloodDonor/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     tools:context=".LoginActivity">
     <com.airbnb.lottie.LottieAnimationView
         android:layout_width="wrap_content"
-        android:layout_height="200dp"
+        android:layout_height="@dimen/dp_200"
         android:scaleType="center"
         app:lottie_loop="true"
         android:id="@+id/lotie_welcome"
@@ -21,8 +21,8 @@
         android:hint="Email"
         app:helperText="Required*"
         app:counterEnabled="true"
-        android:layout_marginStart="25dp"
-        android:layout_marginEnd="25dp"
+        android:layout_marginStart="@dimen/dp_25"
+        android:layout_marginEnd="@dimen/dp_25"
         app:counterMaxLength="30"
         app:errorIconDrawable="@drawable/ic_baseline_error_24"
         app:errorEnabled="true"
@@ -44,10 +44,10 @@
         android:layout_width="match_parent"
         android:id="@+id/textInputLayoutPassword"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginStart="@dimen/dp_25"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginEnd="@dimen/dp_25"
+        android:layout_marginBottom="@dimen/dp_20"
         app:counterEnabled="true"
         app:counterMaxLength="10"
         app:errorEnabled="true"
@@ -70,9 +70,9 @@
     <Button
         android:layout_width="match_parent"
         android:id="@+id/btnLogin"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginStart="30dp"
+        android:layout_marginBottom="@dimen/dp_20"
+        android:layout_marginEnd="@dimen/dp_30"
+        android:layout_marginStart="@dimen/dp_30"
         android:layout_gravity="center"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
@@ -89,7 +89,7 @@
             android:text="New User?"/>
         <TextView
             android:layout_width="wrap_content"
-            android:layout_marginStart="3dp"
+            android:layout_marginStart="@dimen/dp_3"
             android:textColor="#3F51B5"
             android:id="@+id/tvCreateAccount"
             android:clickable="true"
