--- a/BloodDonor/app/src/main/res/layout/activity_sign_up.xml
+++ b/BloodDonor/app/src/main/res/layout/activity_sign_up.xml
@@ -10,9 +10,9 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:hint="Name"
-        android:layout_marginStart="25dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="@dimen/dp_25"
+        android:layout_marginEnd="@dimen/dp_25"
+        android:layout_marginTop="@dimen/dp_10"
         app:helperText="Required*"
         app:counterEnabled="true"
         app:counterMaxLength="30"
@@ -33,9 +33,9 @@
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="25dp"
+        android:layout_marginStart="@dimen/dp_25"
+        android:layout_marginTop="@dimen/dp_5"
+        android:layout_marginEnd="@dimen/dp_25"
         android:hint="Email"
         app:helperText="Required*"
         app:counterEnabled="true"
@@ -60,9 +60,9 @@
         android:layout_width="match_parent"
         android:id="@+id/textInputLayoutPasswordSignUp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="25dp"
+        android:layout_marginStart="@dimen/dp_25"
+        android:layout_marginTop="@dimen/dp_5"
+        android:layout_marginEnd="@dimen/dp_25"
         app:counterEnabled="true"
         app:counterMaxLength="10"
         app:errorEnabled="true"
@@ -87,9 +87,9 @@
         android:layout_width="match_parent"
         android:id="@+id/textInputLayoutPhoneNumberSignUp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="25dp"
+        android:layout_marginStart="@dimen/dp_25"
+        android:layout_marginTop="@dimen/dp_5"
+        android:layout_marginEnd="@dimen/dp_25"
         app:counterEnabled="true"
         app:counterMaxLength="10"
         app:errorEnabled="true"
@@ -116,9 +116,9 @@
         android:layout_width="match_parent"
         android:id="@+id/textInputLayoutAgeSignUp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="25dp"
+        android:layout_marginStart="@dimen/dp_25"
+        android:layout_marginTop="@dimen/dp_5"
+        android:layout_marginEnd="@dimen/dp_25"
         app:counterEnabled="true"
         app:counterMaxLength="2"
         app:errorEnabled="true"
@@ -142,9 +142,9 @@
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="match_parent"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="25dp"
+        android:layout_marginStart="@dimen/dp_25"
+        android:layout_marginTop="@dimen/dp_5"
+        android:layout_marginEnd="@dimen/dp_25"
         android:id="@+id/textInputLayout2"
         android:hint="Blood group"
         android:layout_height="wrap_content">
@@ -152,18 +152,18 @@
             android:id="@+id/autoCompleteTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="16dp"
+            android:paddingBottom="@dimen/dp_16"
             android:textColor="@color/red"
-            android:paddingTop="16dp"
+            android:paddingTop="@dimen/dp_16"
             android:inputType="none"
             android:text="A+" />
     </com.google.android.material.textfield.TextInputLayout>
     <Button
         android:layout_width="match_parent"
         android:id="@+id/btnSignUp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginStart="@dimen/dp_30"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginEnd="@dimen/dp_30"
         android:layout_marginBottom="10dp"
         android:layout_gravity="center"
         android:layout_height="wrap_content"
