--- a/BloodDonor/app/src/main/res/layout/custom_dailog.xml
+++ b/BloodDonor/app/src/main/res/layout/custom_dailog.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:layout_margin="@dimen/dp_20"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -17,12 +18,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Loading..."
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="20dp"
-        android:textSize="20dp"
+        android:layout_marginTop="@dimen/dp_5"
+        android:layout_marginStart="@dimen/dp_20"
+        android:textSize="@dimen/sp_25"
         app:layout_constraintTop_toBottomOf="@id/prbr"
         android:textColor="@color/teal_200"
-        android:paddingBottom="15dp"
+        android:layout_marginBottom="@dimen/dp_10"
+        android:paddingBottom="@dimen/dp_25"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
