--- a/BloodDonor/app/src/main/res/layout/dropdown_item.xml
+++ b/BloodDonor/app/src/main/res/layout/dropdown_item.xml
@@ -1,9 +1,8 @@
 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="Shaurabh"
     android:textColor="@color/black"
     android:textStyle="bold"
-    android:textSize="16sp"
-    android:padding="14dp"
+    android:textSize="@dimen/dp_16"
+    android:padding="@dimen/dp_14"
     xmlns:android="http://schemas.android.com/apk/res/android"/>
