--- a/BloodDonor/app/src/main/res/values/dimens.xml
+++ b/BloodDonor/app/src/main/res/values/dimens.xml
@@ -2,4 +2,30 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="dp_200">200dp</dimen>
+    <dimen name="dp_25">25dp</dimen>
+    <dimen name="dp_20">20dp</dimen>
+    <dimen name="dp_10">10dp</dimen>
+    <dimen name="dp_5">5dp</dimen>
+    <dimen name="dp_30">30dp</dimen>
+    <dimen name="dp_3">3dp</dimen>
+    <dimen name="sp_35">35sp</dimen>
+    <dimen name="dp_35">35dp</dimen>
+    <dimen name="dp_14">14dp</dimen>
+    <dimen name="sp_20">20sp</dimen>
+    <dimen name="sp_25">25sp</dimen>
+    <dimen name="sp_12">12sp</dimen>
+    <dimen name="sp_15">15sp</dimen>
+    <dimen name="sp_21">21sp</dimen>
+    <dimen name="dp_40">40dp</dimen>
+    <dimen name="dp_2">2dp</dimen>
+    <dimen name="dp_1">1dp</dimen>
+    <dimen name="dp_0">0dp</dimen>
+    <dimen name="dp_16">16dp</dimen>
+    <dimen name="dp_28">28dp</dimen>
+    <dimen name="dp_8">8dp</dimen>
+    <dimen name="dp_96">96dp</dimen>
+    <dimen name="dp_240">240dp</dimen>
+    <dimen name="dp_6">6dp</dimen>
+
 </resources>
